Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21216

InnoDB performs dirty read of TRX_SYS page before crash recovery

    XMLWordPrintable

Details

    Description

      InnoDB startup is discovering undo tablespaces in a dirty way. It is reading a possibly stale copy of the TRX_SYS page before processing any redo log records.

      A sign of this problem is the buf_pool_invalidate() call in innobase_start_or_create_for_mysql(). It should not be needed at all, and instead, in recv_recovery_from_checkpoint_start() we should assert that the buffer pool is empty before starting to apply redo log records.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.75d
                  0.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.